--- a/BTimeLogger.Wpf/Controls/MainLayout/MainLayout.xaml
+++ b/BTimeLogger.Wpf/Controls/MainLayout/MainLayout.xaml
@@ -56,7 +56,7 @@
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition />
-                            <RowDefinition />
+                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
