--- a/BTimeLogger.Wpf/Controls/PieChart/PieChart.xaml
+++ b/BTimeLogger.Wpf/Controls/PieChart/PieChart.xaml
@@ -65,7 +65,7 @@
                                                 <Trigger Property="IsMouseOver"
                                                          Value="True">
                                                     <Setter Property="Fill"
-                                                            Value="Blue" />
+                                                            Value="{Binding SliceGeometry.OutlineColor}" />
                                                 </Trigger>
                                             </Style.Triggers>
                                         </Style>
