Add missing key chords and prompt user to save when using exit command

--- a/BTimeLogger.Wpf/Controls/TitleBarMenu/TitleBarMenu.xaml
+++ b/BTimeLogger.Wpf/Controls/TitleBarMenu/TitleBarMenu.xaml
@@ -9,6 +9,9 @@
     <Menu Style="{DynamicResource TitleBarMenuStyle}"
           DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:TitleBarMenu}}}">
         <MenuItem Header="_File">
+            <MenuItem Header="_New"
+                      InputGestureText="Ctrl+N"
+                      Command="{Binding ViewModel.NewReportCommand}" />
             <MenuItem Header="_Open"
                       InputGestureText="Ctrl+O"
                       Command="{Binding ViewModel.OpenCsvsCommand}" />
